--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "antd": "^5.13.2",
     "antd-style": "^3.6.1",
     "classnames": "^2.5.1",
+    "echarts-for-react": "^3.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "omit.js": "^2.0.2",
@@ -60,7 +61,8 @@
     "rc-util": "^5.38.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0"
+    "react-helmet-async": "^1.3.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^3.3.0",
